--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".GraphActivity"></activity>
+        <activity
+            android:name=".GraphActivity"
+            android:screenOrientation="sensorLandscape"></activity>
         <activity android:name=".SummaryActivity" />
         <activity android:name=".HomeActivity">
             <intent-filter>
